--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: imjasonh/setup-crane@v0.1
+
       - name: Setup pack
         uses: buildpacks/github-actions/setup-pack@v5.0.1
 
