feat: create issue from actions

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      issues: write
     steps:
       - id: checkout
         uses: actions/checkout@v3
