--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      issues: write
     steps:
       - id: checkout
         uses: actions/checkout@v3
@@ -75,7 +74,7 @@ jobs:
       - id: register
         uses: docker://ghcr.io/buildpacks/actions/registry/request-add-entry:5.1.0
         with:
-          token:   ${{ secrets.GITHUB_TOKEN }}
+          token:   ${{ secrets.PUBLIC_TOKEN }}
           id:      ${{ steps.package.outputs.bp_id }}
           version: ${{ steps.package.outputs.version }}
           address: ${{ steps.package.outputs.address }}
