fix: metadata package

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -3,7 +3,7 @@ api = "0.8"
 [buildpack]
 
 id = "anasinnyk/dotenv"
-version = "0.0.4"
+version = "0.0.5"
 name = "dotenv"
 homepage = "https://github.com/anasinnyk/dotent-buildpack"
 description = "Load environment variables form .env file"
@@ -13,6 +13,9 @@ keywords = ["dotenv"]
 
   type = "MIT"
   uri = "https://github.com/anasinnyk/dotenv-buildpack/blob/master/LICENSE"
+
+[metadata]
+dotenv_suffix = ""
 
 [[stacks]]
 
